# vim-jp-profile-stats

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
