[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vim-jp-profile-stats"
readme = "README.md"

version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "gspread>=6.1.2",
    "plotly>=5.24.0",
    "streamlit",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
ignore_missing_imports = true
